@@ -22,17 +22,18 @@
         <dependency force="true" org="com.vaadin" name="vaadin" rev="7.1+" conf="build-vaadin7,vaadin7->build-standard"/>
         <dependency force="true" org="org.json" name="json" rev="20090211" conf="build-vaadin7,vaadin7->default"/>
         <dependency force="true" org="javax.servlet" name="servletapi" rev="3.0" conf="build->default"/>
-        <dependency force="true" org="javax.persistence" name="persistence-api" rev="2.0" conf="build->default"/>
+        <dependency force="true" org="javax.persistence" name="persistence-api" rev="2.1" conf="build->default"/>
         <dependency force="true" org="javax.portlet" name="portlet-api" rev="2.0" conf="build->default"/>
         <dependency force="true" org="javax.validation" name="validation-api" rev="1.0.0.GA" conf="build->default"/>
         <dependency force="true" org="net.sourceforge.jibx" name="jibx" rev="1.2.5" conf="build->runtime-xpp3,extras;jibx-bind->bind"/>
         <dependency force="true" org="net.sourceforge.java-readline" name="java-readline" rev="0.8.0" conf="build->default"/>
         <dependency force="true" org="net.sourceforge.opencsv" name="opencsv" rev="2.2" conf="build->default"/>
+        <dependency force="true" org="org.apache.ant" name="ant" rev="1.8+" conf="build->default"/>
         <dependency force="true" org="org.apache.log4j" name="log4j" rev="1.2.17" conf="build->default"/>
         <dependency force="true" org="org.apache.commons" name="commons-logging" rev="1.1.1" conf="build->api"/>
         <dependency force="true" org="org.jmock" name="jmock" rev="2.5.1" conf="build,test->core"/>
         <dependency force="true" org="org.hamcrest" name="hamcrest" rev="1.1" conf="build->default"/>
-        <dependency force="true" org="org.hibernate" name="hibernate" rev="4.1+" conf="build-&gt;core"/>
+        <dependency force="true" org="org.hibernate" name="hibernate" rev="4.3+" conf="build-&gt;core"/>
         <dependency force="true" org="org.slf4j" name="slf4j" rev="1.7.2" conf="build->default;test->log4j"/>
         <dependency force="true" org="org.springframework" name="spring" rev="4.0+"
           conf="build->aop,beans,aspects,context-support,expression,orm,oxm,tx,web-servlet"/>
